syntax = "proto3";

package otdd.config;

message OtddRedirectorConfig {
	string target_cluster = 1;
	uint64 interval = 2;
}
